syntax = "proto3";

option go_package = "github.com/tsukaychan/demos/proto";

message User {
  int64 id = 1;
  string name = 2;
  string avatar = 3;
  map<string, string> attributes = 4;
  optional int32 age = 5;
  repeated string nicknames = 7;
  Address address = 8;
  oneof contacts {
    string email = 9;
    string phone = 10;
  }
  Gender gender = 11;
}

message Address {
  string province = 1;
  string city = 2;
}

enum Gender {
  Unknown = 0;
  Male = 1;
  Female = 2;
}

service UserService {
  rpc GetByID(GetByIDReq) returns (GetByIDResp);
}

message GetByIDReq {
  int64 id = 1;
}

message GetByIDResp {
  User user = 1;
}